--- a/weekend.html
+++ b/weekend.html
@@ -46,8 +46,9 @@ gtag('config', 'G-RL4ZYLE5G9');
 
 <!-- Navigation -->
 <nav class="section-nav">
-<a href="index.html" class="section-link">Today</a>
+<a href="index.html" class="section-link">Daily Edition</a>
 <a href="weekend.html" class="section-link active">Weekend Magazine</a>
+<a href="personal.html" class="section-link">Personal Edition</a>
 </nav>
 
 <!-- Magazine Hero -->
