--- a/weekend.html
+++ b/weekend.html
@@ -364,7 +364,7 @@ Broad participation with high conviction. The market is moving decisively higher
 </div>
 <div class="sector-detail" id="sector-payment-detail">
 <p class="sector-weekly" id="sector-payment-weekly"><span class="weekly-label">THIS WEEK:</span> <span class="weekly-text"></span></p>
-<p class="sector-drivers"><strong>Key drivers:</strong> Institutional adoption, ETF flows, macro hedging demand, regulatory clarity, halving cycles.</p>
+<p class="sector-drivers"><span class="drivers-label">KEY DRIVERS:</span> Institutional adoption, ETF flows, macro hedging demand, regulatory clarity, halving cycles.</p>
 <p class="sector-about">Digital currencies designed primarily for peer-to-peer transactions and store of value. Bitcoin dominates, with privacy coins and faster alternatives filling niches.</p>
 </div>
 </div>
@@ -380,7 +380,7 @@ Broad participation with high conviction. The market is moving decisively higher
 </div>
 <div class="sector-detail" id="sector-stablecoin-detail">
 <p class="sector-weekly" id="sector-stablecoin-weekly"><span class="weekly-label">THIS WEEK:</span> <span class="weekly-text"></span></p>
-<p class="sector-drivers"><strong>Key drivers:</strong> Trading volume, DeFi TVL, regulatory developments, yield differentials vs TradFi, reserve transparency.</p>
+<p class="sector-drivers"><span class="drivers-label">KEY DRIVERS:</span> Trading volume, DeFi TVL, regulatory developments, yield differentials vs TradFi, reserve transparency.</p>
 <p class="sector-about">Tokens pegged to fiat currencies, primarily USD. Essential infrastructure for trading, DeFi, and cross-border payments.</p>
 </div>
 </div>
@@ -396,7 +396,7 @@ Broad participation with high conviction. The market is moving decisively higher
 </div>
 <div class="sector-detail" id="sector-infrastructure-detail">
 <p class="sector-weekly" id="sector-infrastructure-weekly"><span class="weekly-label">THIS WEEK:</span> <span class="weekly-text"></span></p>
-<p class="sector-drivers"><strong>Key drivers:</strong> Developer activity, TVL growth, transaction throughput, network upgrades, ecosystem expansion.</p>
+<p class="sector-drivers"><span class="drivers-label">KEY DRIVERS:</span> Developer activity, TVL growth, transaction throughput, network upgrades, ecosystem expansion.</p>
 <p class="sector-about">Layer 1 blockchains and scaling solutions that power decentralized applications. The foundation layer of crypto's technology stack.</p>
 </div>
 </div>
@@ -412,7 +412,7 @@ Broad participation with high conviction. The market is moving decisively higher
 </div>
 <div class="sector-detail" id="sector-defi-detail">
 <p class="sector-weekly" id="sector-defi-weekly"><span class="weekly-label">THIS WEEK:</span> <span class="weekly-text"></span></p>
-<p class="sector-drivers"><strong>Key drivers:</strong> TVL trends, yield opportunities, protocol revenue, institutional DeFi adoption, regulatory signals.</p>
+<p class="sector-drivers"><span class="drivers-label">KEY DRIVERS:</span> TVL trends, yield opportunities, protocol revenue, institutional DeFi adoption, regulatory signals.</p>
 <p class="sector-about">Decentralized lending, trading, and yield protocols. Recreates traditional financial services without intermediaries.</p>
 </div>
 </div>
@@ -428,7 +428,7 @@ Broad participation with high conviction. The market is moving decisively higher
 </div>
 <div class="sector-detail" id="sector-utility-detail">
 <p class="sector-weekly" id="sector-utility-weekly"><span class="weekly-label">THIS WEEK:</span> <span class="weekly-text"></span></p>
-<p class="sector-drivers"><strong>Key drivers:</strong> Enterprise adoption, network usage metrics, partnership announcements, real-world integration.</p>
+<p class="sector-drivers"><span class="drivers-label">KEY DRIVERS:</span> Enterprise adoption, network usage metrics, partnership announcements, real-world integration.</p>
 <p class="sector-about">Tokens powering specific services: oracles, storage, compute. Value tied to actual network usage and demand for services.</p>
 </div>
 </div>
@@ -444,7 +444,7 @@ Broad participation with high conviction. The market is moving decisively higher
 </div>
 <div class="sector-detail" id="sector-entertainment-detail">
 <p class="sector-weekly" id="sector-entertainment-weekly"><span class="weekly-label">THIS WEEK:</span> <span class="weekly-text"></span></p>
-<p class="sector-drivers"><strong>Key drivers:</strong> Game launches, user metrics, NFT market sentiment, celebrity/brand partnerships, retail speculation cycles.</p>
+<p class="sector-drivers"><span class="drivers-label">KEY DRIVERS:</span> Game launches, user metrics, NFT market sentiment, celebrity/brand partnerships, retail speculation cycles.</p>
 <p class="sector-about">Gaming, metaverse, and NFT-adjacent tokens. High beta to risk sentiment, driven by user engagement and speculation.</p>
 </div>
 </div>
@@ -460,7 +460,7 @@ Broad participation with high conviction. The market is moving decisively higher
 </div>
 <div class="sector-detail" id="sector-ai-detail">
 <p class="sector-weekly" id="sector-ai-weekly"><span class="weekly-label">THIS WEEK:</span> <span class="weekly-text"></span></p>
-<p class="sector-drivers"><strong>Key drivers:</strong> AI industry momentum, GPU demand, decentralized compute adoption, NVIDIA correlation, model training costs.</p>
+<p class="sector-drivers"><span class="drivers-label">KEY DRIVERS:</span> AI industry momentum, GPU demand, decentralized compute adoption, NVIDIA correlation, model training costs.</p>
 <p class="sector-about">Decentralized GPU networks and AI-focused protocols. Benefiting from the broader AI investment theme and compute demand.</p>
 </div>
 </div>
