--- a/personal.html
+++ b/personal.html
@@ -237,15 +237,15 @@
                     <p class="settings-hint">Sets the timing for your morning brief</p>
                     <div class="region-options" id="region-options">
                         <button class="region-btn" data-region="apac">
-                            <span class="region-icon">🌏</span>
+                            <img src="icons/apac.png" alt="Asia-Pacific" class="region-icon">
                             <span class="region-name">Asia-Pacific</span>
                         </button>
                         <button class="region-btn" data-region="emea">
-                            <span class="region-icon">🌍</span>
+                            <img src="icons/emea.png" alt="Europe & Middle East" class="region-icon">
                             <span class="region-name">Europe & Middle East</span>
                         </button>
                         <button class="region-btn" data-region="americas">
-                            <span class="region-icon">🌎</span>
+                            <img src="icons/americas.png" alt="Americas" class="region-icon">
                             <span class="region-name">Americas</span>
                         </button>
                     </div>
