--- a/index.html
+++ b/index.html
@@ -382,10 +382,9 @@
                     <header class="number-header">
                         <span class="number-label">THE NUMBER</span>
                     </header>
-                    <div class="number-value" id="number-value">$94.2B</div>
-                    <p class="number-context" id="number-context">
-                        Stablecoin market cap at all-time high—dry powder waiting on sidelines
-                    </p>
+                    <div class="number-value" id="number-value">—</div>
+                    <div class="number-metric" id="number-metric"></div>
+                    <p class="number-context" id="number-context"></p>
                 </section>
 
                 <!-- Market Mood 9-Box -->
