--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
                     </header>
                     <div class="number-value" id="number-value">—</div>
                     <div class="number-metric" id="number-metric"></div>
+                    <div class="number-change" id="number-change"></div>
                     <p class="number-context" id="number-context"></p>
                 </section>
 
