--- a/index.html
+++ b/index.html
@@ -360,12 +360,8 @@
                         
                         <!-- Analyst Byline -->
                         <div class="analyst-byline">
-                            <div class="analyst-avatar" id="analyst-avatar">
-                                <svg viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <circle cx="20" cy="20" r="20" fill="#1a1a1a"/>
-                                    <circle cx="20" cy="15" r="7" fill="#f5f1eb"/>
-                                    <path d="M8 36c0-6.627 5.373-12 12-12s12 5.373 12 12" fill="#f5f1eb"/>
-                                </svg>
+                            <div class="analyst-avatar">
+                                <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=96&h=96&fit=crop&crop=face&q=80" alt="Analyst" class="analyst-photo">
                             </div>
                             <div class="analyst-info">
                                 <span class="analyst-name">Litmus Intelligence</span>
