--- a/weekend.html
+++ b/weekend.html
@@ -511,7 +511,7 @@ Broad participation with high conviction. The market is moving decisively higher
 
 <!-- Footer -->
 <footer class="site-footer">
-<p>&copy; 2025 The Litmus. Crypto intelligence for the informed investor.</p>
+<p>&copy; 2025 Litmus Intelligence for the informed crypto investor.</p>
 </footer>
 </div>
 
