--- a/media.html
+++ b/media.html
@@ -150,8 +150,8 @@
 
     <!-- Footer -->
     <footer class="footer" style="padding: var(--xl); text-align: center; border-top: 1px solid var(--rule);">
-        <p class="footer-tagline">Intelligence for the informed investor</p>
-        <p class="footer-legal" style="font-size: 0.75rem; color: var(--ink-tertiary); margin-top: var(--sm);">Editorial & Analysis supported by AI. Not financial advice.</p>
+        <p class="footer-tagline">&copy; 2025 Litmus Intelligence for the informed crypto investor</p>
+            <p class="footer-legal">Our Editorial & Analysis are supported by AI. Not financial advice.</p>
     </footer>
 
     <script>
