--- a/personal.html
+++ b/personal.html
@@ -422,6 +422,12 @@
             }
         });
     }
+         <!-- Footer -->
+    <footer class="footer" style="padding: var(--xl); text-align: center; border-top: 1px solid var(--rule);">
+        <p class="footer-tagline">&copy; 2025 Litmus Intelligence for the informed crypto investor</p>
+            <p class="footer-legal">Our Editorial & Analysis are supported by AI. Not financial advice.</p>
+    </footer>
+        
     </script>
 </body>
 </html>
