--- a/weekend.html
+++ b/weekend.html
@@ -509,10 +509,11 @@ Broad participation with high conviction. The market is moving decisively higher
 </aside>
 </div>
 
-<!-- Footer -->
-<footer class="site-footer">
-<p>&copy; 2025 Litmus Intelligence for the informed crypto investor.</p>
-</footer>
+ <!-- Footer -->
+    <footer class="footer" style="padding: var(--xl); text-align: center; border-top: 1px solid var(--rule);">
+        <p class="footer-tagline">&copy; 2025 Litmus Intelligence for the informed crypto investor</p>
+            <p class="footer-legal">Our Editorial & Analysis are supported by AI. Not financial advice.</p>
+    </footer>
 </div>
 
 <!-- Auth Modal -->
