--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="auth.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,400;0,600;0,700;1,400;1,600&family=Libre+Baskerville:wght@400;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@0,400;0,700;1,400;1,700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
@@ -65,8 +65,7 @@
             <!-- Center: Brand -->
             <div class="masthead-center">
                 <a href="/" class="masthead-brand">
-                    <img src="litmuslogo.png" alt="Litmus Daily" class="logo-icon">
-                    <span class="brand-name">Litmus<em>Daily</em></span>
+                    <span class="brand-name"><strong>S.</strong><em>Daily</em></span>
                 </a>
             </div>
             
@@ -505,8 +504,8 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p class="footer-tagline">&copy; 2025 Litmus Intelligence for the informed crypto investor</p>
-            <p class="footer-legal">Our Editorial & Analysis are supported by AI. Not financial advice.</p>
+            <p class="footer-tagline">Intelligence for the informed investor</p>
+            <p class="footer-legal">Editorial & Analysis supported by AI. Not financial advice.</p>
         </footer>
     </div>
 
