--- a/media.html
+++ b/media.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,400;0,600;0,700;1,400;1,600&family=Libre+Baskerville:wght@400;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@0,400;0,700;1,400;1,700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Fixed Header -->
@@ -30,7 +30,7 @@
             <div class="masthead-center">
                 <a href="/" class="masthead-brand">
                     <img src="litmuslogo.png" alt="Litmus Daily" class="logo-icon">
-                    <span class="brand-name brand-media">Litmus<em>Media</em></span>
+                    <span class="brand-name brand-media"><strong>S.</strong><em>Media</em></span>
                 </a>
             </div>
             
@@ -150,8 +150,8 @@
 
     <!-- Footer -->
     <footer class="footer" style="padding: var(--xl); text-align: center; border-top: 1px solid var(--rule);">
-        <p class="footer-tagline">&copy; 2025 Litmus Intelligence for the informed crypto investor</p>
-            <p class="footer-legal">Our Editorial & Analysis are supported by AI. Not financial advice.</p>
+        <p class="footer-tagline">Intelligence for the informed investor</p>
+        <p class="footer-legal" style="font-size: 0.75rem; color: var(--ink-tertiary); margin-top: var(--sm);">Editorial & Analysis supported by AI. Not financial advice.</p>
     </footer>
 
     <script>
