--- a/weekend.html
+++ b/weekend.html
@@ -21,7 +21,7 @@ gtag('config', 'G-RL4ZYLE5G9');
 <link rel="stylesheet" href="auth.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,400;0,600;0,700;1,400;1,600&family=Libre+Baskerville:wght@400;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@0,400;0,700;1,400;1,700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
 <script>
 // UI Functions
@@ -52,7 +52,7 @@ function handleAuthClick() {
 <div class="masthead-center">
 <a href="index.html" class="brand-link">
 <img src="litmuslogo.png" alt="The Litmus" class="brand-logo">
-<h1 class="brand-name brand-weekend">Litmus<em>Weekend</em></h1>
+<h1 class="brand-name brand-weekend"><strong>S.</strong><em>Weekend</em></h1>
 </a>
 </div>
 
@@ -509,11 +509,10 @@ Broad participation with high conviction. The market is moving decisively higher
 </aside>
 </div>
 
- <!-- Footer -->
-    <footer class="footer" style="padding: var(--xl); text-align: center; border-top: 1px solid var(--rule);">
-        <p class="footer-tagline">&copy; 2025 Litmus Intelligence for the informed crypto investor</p>
-            <p class="footer-legal">Our Editorial & Analysis are supported by AI. Not financial advice.</p>
-    </footer>
+<!-- Footer -->
+<footer class="site-footer">
+<p>&copy; 2025 The Litmus. Crypto intelligence for the informed investor.</p>
+</footer>
 </div>
 
 <!-- Auth Modal -->
