--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- Center: Brand -->
             <div class="masthead-center">
                 <a href="/" class="masthead-brand">
-                    <span class="brand-name"><strong>S.</strong><em>Daily</em></span>
+                    <span class="brand-name"><strong>S</strong><span class="brand-dot">.</span>Daily</span>
                 </a>
             </div>
             
