--- a/media.html
+++ b/media.html
@@ -30,7 +30,7 @@
             <div class="masthead-center">
                 <a href="/" class="masthead-brand">
                     <img src="litmuslogo.png" alt="Litmus Daily" class="logo-icon">
-                    <span class="brand-name brand-media"><strong>S.</strong><em>Media</em></span>
+                    <span class="brand-name brand-media"><strong>S</strong><span class="brand-dot">.</span><span class="brand-word">Media</span></span>
                 </a>
             </div>
             
