--- a/index.html
+++ b/index.html
@@ -369,6 +369,9 @@
                                 <span class="analyst-name" id="analyst-name">James · Sirruna Edge</span>
                                 <span class="analyst-role" id="analyst-role">Senior Market Analyst</span>
                             </div>
+                            <div class="analyst-brand">
+                                <span class="brand-mark"><strong>S</strong><span class="brand-dot">.</span></span>
+                            </div>
                         </div>
                         
                         <!-- Related Reading -->
