--- a/personal.html
+++ b/personal.html
@@ -157,9 +157,17 @@
         <!-- The Landscape Section -->
         <section class="landscape-section">
             <header class="section-header">
-                <div class="section-label" id="market-condition-label">Riding the Wave</div>
-                <h1 class="section-title">Your Edge</h1>
-                <p class="section-subtitle">How your coins are moving against the market</p>
+                <div class="section-header-top">
+                    <div class="section-header-left">
+                        <div class="section-label" id="market-condition-label">Riding the Wave</div>
+                        <h1 class="section-title">Your Edge</h1>
+                        <p class="section-subtitle">How your coins are moving against the market</p>
+                    </div>
+                    <div class="section-header-right">
+                        <span class="data-timestamp-label">Data as of</span>
+                        <span class="data-timestamp" id="data-timestamp">--:-- UTC</span>
+                    </div>
+                </div>
             </header>
 
             <!-- Empty State -->
