--- a/index.html
+++ b/index.html
@@ -296,8 +296,7 @@
         <!-- THIS WEEK'S FOCUS - Context Cards (Teal themed) -->
         <section class="week-focus" id="week-focus">
             <header class="week-focus-header">
-                <h2 class="week-focus-title" id="week-focus-title">This Week · Dec 9</h2>
-                <p class="week-focus-subtitle">The four things that matter this week</p>
+                <h2 class="week-focus-title" id="week-focus-title">What to Watch · Dec 9</h2>
             </header>
             <div class="week-focus-cards">
                 <article class="focus-card" data-week-section="fulcrum">
