--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <!-- Center: Brand -->
             <div class="masthead-center">
                 <a href="/" class="masthead-brand">
-                    <span class="brand-name"><strong>S</strong><span class="brand-dot">.</span>Daily</span>
+                    <span class="brand-name brand-full">SIRRUNA<span class="brand-dot">.</span></span>
                 </a>
             </div>
             
@@ -284,9 +284,9 @@
 
         <!-- Section Navigation -->
         <nav class="section-nav">
-            <a href="#" class="section-link active">Daily Edition</a>
-            <a href="weekend.html" class="section-link">Weekend Magazine</a>
-            <a href="personal.html" class="section-link">Personal Edition</a>
+            <a href="#" class="section-link active">Today</a>
+            <a href="weekend.html" class="section-link">Weekend</a>
+            <a href="personal.html" class="section-link">Personal</a>
             <a href="media.html" class="section-link">Media</a>
         </nav>
     </div>
