--- a/weekend.html
+++ b/weekend.html
@@ -110,9 +110,9 @@ function handleAuthClick() {
 
 <!-- Navigation -->
 <nav class="section-nav">
-<a href="index.html" class="section-link">Daily Edition</a>
-<a href="weekend.html" class="section-link active">Weekend Magazine</a>
-<a href="personal.html" class="section-link">Personal Edition</a>
+<a href="index.html" class="section-link">Today</a>
+<a href="weekend.html" class="section-link active">Weekend</a>
+<a href="personal.html" class="section-link">Personal</a>
 <a href="media.html" class="section-link">Media</a>
 </nav>
 
@@ -540,12 +540,11 @@ Broad participation with high conviction. The market is moving decisively higher
     <div class="footer-content">
         <div class="footer-brand">
             <span class="footer-logo"><strong>S</strong><span class="footer-dot">.</span></span>
-            <span class="footer-name">SIRRUNA</span>
+            <span class="footer-name">Sirruna</span>
         </div>
         <p class="footer-tagline"><em>Our secret. Your edge.</em></p>
         <div class="footer-legal">
-            <p class="footer-disclaimer">Editorial & Analysis supported by AI. Not financial advice.</p>
-            <p class="footer-copyright">&copy; 2025 Sirruna. All rights reserved.</p>
+            <p class="footer-disclaimer">Editorial supported by AI · Not financial advice · &copy; 2025</p>
             <nav class="footer-links">
                 <a href="/terms.html">Terms</a>
                 <a href="/privacy.html">Privacy</a>
