--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <!-- Center: Brand -->
             <div class="masthead-center">
                 <a href="/" class="masthead-brand">
-                    <span class="brand-name brand-full">SIRRUNA<span class="brand-dot">.</span></span>
+                    <span class="brand-name brand-full"><strong>SIRRUNA<span class="brand-dot">.</span></strong></span>
                 </a>
             </div>
             
